--- a/myapp/app/views/users/_form.html.erb
+++ b/myapp/app/views/users/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :pass %>
+    <%= form.text_field :pass, id: :user_pass %>
+  </div>
+
+  <div class="field">
     <%= form.label :email %>
     <%= form.text_field :email, id: :user_email %>
   </div>
