--- a/myapp/app/views/users/new.html.erb
+++ b/myapp/app/views/users/new.html.erb
@@ -1,27 +1,24 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<h1>アカウント登録</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages' %>
 
-      <%= f.label :user_name %>
+      <%= f.label :アカウント名 %>
       <%= f.text_field :user_name, class: 'form-control' %>
 
-      <%= f.label :email %>
+      <%= f.label :メールアドレス %>
       <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :generation %>
-      <%= f.text_field :generation, class: 'form-control' %>
-
-      <%= f.label :password %>
+      <%= f.label :パスワード %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "再入力" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "アカウントを登録する", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
