--- a/myapp/app/views/layouts/_header.html.erb
+++ b/myapp/app/views/layouts/_header.html.erb
@@ -3,24 +3,40 @@
     <%= link_to "さくれ", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "ホーム", root_path %></li>
-        <li><%= link_to "観光地登録", add_spot_path %></li>
         <% if logged_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              アカウント <b class="caret"></b>
+              かんこうち <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "プロフィール", current_user %></li>
-              <li><%= link_to "設定", '#' %></li>
+              <li><%= link_to "とうろく", add_spot_path %></li>
+              <li><%= link_to "さがす", '#' %></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              けいかくひょう <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "つくる", add_spot_path %></li>
+              <li><%= link_to "みる", '#' %></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              あかうんと <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "ぷろふぃーる", current_user %></li>
+              <li><%= link_to "せってい", '#' %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to "ログアウト", logout_path, method: "delete" %>
+                <%= link_to "ろぐあうと", logout_path, method: "delete" %>
               </li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "ログイン", login_path %></li>
+          <li><%= link_to "ろぐいん", login_path %></li>
         <% end %>
       </ul>
     </nav>
