--- a/web_rails/myapp/app/views/tourist_spot/new.html.erb
+++ b/web_rails/myapp/app/views/tourist_spot/new.html.erb
@@ -22,13 +22,13 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@spot) do |f| %>
 
-      <%= f.label :すぽっとのなまえ %>
+      <%= f.label :"すぽっとのなまえ" %>
       <%= f.text_field :spot_name, class: 'form-control' %>
 
-      <%= f.label :けん %>
+      <%= f.label :"けん" %>
       <%= f.collection_select :prefs_id, Pref.all, :id, :name , :onchange => "get_id(this.id);"%>
 
-      <%= f.label :し %> 
+      <%= f.label :"し" %> 
       <%= f.collection_select(:cities_id, @city, :id, :name) %>
 
       <%= f.label :"じゅうしょ しょうさい" %>
