--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "とうろく", add_spot_path %></li>
-              <li><%= link_to "さがす", '#' %></li>
+              <li><%= link_to "さがす"  ,   search_path %></li>
             </ul>
           </li>
           <li class="dropdown">
