[Change] 登録フォーム：残りプルダウン連動と入力値チェックのみ

--- a/web_rails/myapp/app/views/layouts/_footer.html.erb
+++ b/web_rails/myapp/app/views/layouts/_footer.html.erb
@@ -1,7 +1,5 @@
 <footer class="footer">
   <p style="text-align:center;">
-    <a href="http://www.railstutorial.org/">
-      あいこんが入る予定
-    </a>
+    <%= image_tag("icon/さくれアイコン3.png", :size => "50x50") %>
   </p>
 </footer>
