--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "さくれ", root_path, id: "logo" %>
+    <%= image_tag("icon/さくれロゴ1.png", :size => "112x50") %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
