--- a/web_rails/myapp/app/views/search/search.html.erb
+++ b/web_rails/myapp/app/views/search/search.html.erb
@@ -1,47 +1,34 @@
+<!-- まだ未完成です　-->
 <% provide(:title, "けんさく") %>
 <h1>けんさくするよ</h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-  <!-- TAB CONTROLLERS -->
-  <input id="panel-1-ctrl" class="panel-radios" type="radio" name="tab-radios" checked>
-  <input id="panel-2-ctrl" class="panel-radios" type="radio" name="tab-radios">
-  <input id="panel-3-ctrl" class="panel-radios" type="radio" name="tab-radios">
+<div class=”container-fluid”>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
 
-  <!-- TABS LIST -->
-  <ul id="tabs-list">
-      <!-- MENU TOGGLE -->
-      <li id="li-for-panel-1">
-        <label class="panel-label" for="panel-1-ctrl">Tab1</label>
-      </li><!--INLINE-BLOCK FIX-->
-      <li id="li-for-panel-2">
-        <label class="panel-label" for="panel-2-ctrl">Tab2</label>
-      </li><!--INLINE-BLOCK FIX-->
-      <li id="li-for-panel-3">
-        <label class="panel-label" for="panel-3-ctrl">Tab3</label>
-      </li><!--INLINE-BLOCK FIX-->
-  </ul>
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a href="#product-tab" class="nav-link active" data-toggle="tab" >さくひん</a>
+        </li>
+        <li class="nav-item">
+          <a href="#pref-tab" class="nav-link" data-toggle="tab" >ちいき</a>
+        </li>
+      </ul>
 
-  <!-- THE PANELS -->
-  <article id="panels">
-    <div class="container">
-      <section id="panel-1">
-        <main>
-          <p>Content1</p>
-        </main>
-      </section>
-      <section id="panel-2">
-        <main>
-          <p>Content2</p>
-        </main>
-      </section>
-      <section id="panel-3">
-        <main>
-          <p>Content3</p>
-        </main>
-      </section>
+      <div class="tab-content">
+        <div id="product-tab" class="tab-pane active">
+          <%= form_tag(search_path, method: "get") do  %>
+            <%= text_field_tag :search, '', placeholder: "さくひんめい", class:"form-control"%>
+            <%= submit_tag "Search", name: nil, class: "btn btn-primary" %>
+          <% end %>
+        </div>
+        <div id="pref-tab" class="tab-pane">
+          <%= form_tag(search_path, method: "get") do  %>
+            <%= text_field_tag :search, '', placeholder: "けんめい", class:"form-control" %>
+            <%= submit_tag "Search", name: nil, class: "btn btn-primary" %>
+          <% end %>
+        </div>
+
     </div>
-  </article>
-
   </div>
 </div>
