[Add] 観光地登録フォーム完成

--- a/web_rails/myapp/app/views/layouts/_footer.html.erb
+++ b/web_rails/myapp/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <p style="text-align:center;">
+  <%= link_to root_path, id: "logo" do %>
     <%= image_tag("icon/さくれアイコン3.png", :size => "50x50") %>
-  </p>
+  <% end %>
 </footer>
