--- a/web_rails/myapp/app/assets/stylesheets/custom.css.scss
+++ b/web_rails/myapp/app/assets/stylesheets/custom.css.scss
@@ -61,7 +61,6 @@ p {
 
 
 /* header */
-
 #logo {
   float: left;
   margin-right: 10px;
@@ -100,6 +99,9 @@ footer {
       float: left;
       margin-left: 15px;
     }
+  }
+  p#img_center {
+    text-align: center; 
   }
 }
 
