--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -1,6 +1,8 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= image_tag("icon/さくれロゴ1.png", :size => "112x50") %>
+    <%= link_to root_path, id: "logo" do %>
+      <%= image_tag("icon/さくれロゴ1.png", :size => "112x50") %>
+    <% end %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
@@ -36,6 +38,7 @@
             </ul>
           </li>
         <% else %>
+          <li><%= link_to "さくれのメンバーになる", signup_path %></li>
           <li><%= link_to "ろぐいん", login_path %></li>
         <% end %>
       </ul>
