--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "ぷろふぃーる", current_user %></li>
-              <li><%= link_to "せってい", '#' %></li>
+              <li><%= link_to "せってい", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "ろぐあうと", logout_path, method: "delete" %>
