--- a/web_rails/myapp/app/views/users/edit.html.erb
+++ b/web_rails/myapp/app/views/users/edit.html.erb
@@ -1,10 +1,18 @@
-<% provide(:title, 'ゆーざー　さくせい') %>
-<h1>アカウント登録</h1>
+<% provide(:title, "ゆーざーへんしゅう") %>
+<h1>ぷろふぃーる　へんしゅう</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
+
+    <%= form_for(@user, :html => {:multiple => true}) do |f| %>
       <%= render 'shared/error_messages' %>
+      
+      <% if @user.image_name? %>
+        <%= image_tag @user.image_name.thumb.url %>
+    　<% end %>
+
+      <%= f.label :あいこん　へんこう %>
+      <%= f.file_field :image_name %>
       
       <%= f.label :ゆーざーねーむ %>
       <%= f.text_field :user_name, class: 'form-control' %>
@@ -18,7 +26,8 @@
       <%= f.label :さいにゅうりょく, "再入力" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit :ゆーざーをつくる, class: "btn btn-primary" %>
+      <%= f.submit :こうしんする, class: "btn btn-primary" %>
     <% end %>
+
   </div>
 </div>
