--- a/web_rails/myapp/app/views/users/show.html.erb
+++ b/web_rails/myapp/app/views/users/show.html.erb
@@ -3,7 +3,9 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
-        <%= gravatar_for @user %>
+        <% if @user.image_name? %>
+          <%= image_tag @user.image_name.thumb.url %>
+        <% end %>
         <%= @user.user_name %>
       </h1>
     </section>
