--- a/web_rails/myapp/app/views/spot/create_s.html.erb
+++ b/web_rails/myapp/app/views/spot/create_s.html.erb
@@ -11,10 +11,15 @@
     <%= f.label :"さくひん しょうさい" %>
     <%= f.text_area :details, class: 'form-control' %>
 
+    <%= f.label :"郵便番号" %>
     <%= f.text_field :postcode, class: 'form-control' %>
+    <%= f.label :"都道府県" %>
     <%= f.collection_select(:prefecture_code, JpPrefecture::Prefecture.all, :code, :name, {prompt: "選択してください", class: 'form-control'}) %>
+    <%= f.label :"市" %>
     <%= f.text_field :address_city, class: 'form-control' %>
+    <%= f.label :"区" %>
     <%= f.text_field :address_street, class: 'form-control' %>
+    <%= f.label :"建物" %>
     <%= f.text_field :address_building, class: 'form-control' %>
     <%= f.submit "観光地を登録する", class: "btn btn-primary" %>
     
