--- a/web_rails/myapp/app/views/search/search_detail.html.erb
+++ b/web_rails/myapp/app/views/search/search_detail.html.erb
@@ -1,3 +1,4 @@
+<%= render 'favorite/favorite'%>
 <h1><%= Time.now %></h1>
 <table>
     <tr>
@@ -25,6 +26,6 @@
     </tr>
     <tr>
         <th>評価：</th>
-        <td><%= @detail[0].evalution %></td>
+        <td><%= @test %></td>
     </tr>
 </table>
