--- a/web_rails/myapp/app/views/layouts/_footer.html.erb
+++ b/web_rails/myapp/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
 <footer class="footer">
-  <%= link_to root_path, id: "logo" do %>
-    <%= image_tag("icon/さくれアイコン3.png", :size => "50x50") %>
-  <% end %>
+  <p style="text-align:center;">
+    <a href="http://www.railstutorial.org/">
+      あいこんが入る予定
+    </a>
+  </p>
 </footer>
