--- a/web_rails/myapp/app/views/users/new.html.erb
+++ b/web_rails/myapp/app/views/users/new.html.erb
@@ -1,24 +1,24 @@
-<% provide(:title, 'ゆーざー　さくせい') %>
+<% provide(:title, 'Sign up') %>
 <h1>アカウント登録</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages' %>
-      
-      <%= f.label :ゆーざーねーむ %>
+
+      <%= f.label :アカウント名 %>
       <%= f.text_field :user_name, class: 'form-control' %>
 
-      <%= f.label :めーるあどれす %>
+      <%= f.label :メールアドレス %>
       <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :ぱすわーど %>
+      <%= f.label :パスワード %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :さいにゅうりょく, "再入力" %>
+      <%= f.label :password_confirmation, "再入力" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit :ゆーざーをつくる, class: "btn btn-primary" %>
+      <%= f.submit "アカウントを登録する", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
