--- a/web_rails/myapp/app/views/spot/new.html.erb
+++ b/web_rails/myapp/app/views/spot/new.html.erb
@@ -8,6 +8,9 @@
       <%= f.label :"さくひんのなまえ" %>
       <%= f.text_field :product_name, class: 'form-control' %>
 
+      <%= f.label :"さくひんのじゃんる" %>
+      <%= f.collection_select(:genre_id, Genre.all, :id, :genre_name, {prompt: "選択してください", class: 'form-control'}) %>
+
       <%= f.submit "この作品で登録する", class: "btn btn-primary" %>
     <% end %>
   </div>
