--- a/web_rails/myapp/app/views/search/search_detail.html.erb
+++ b/web_rails/myapp/app/views/search/search_detail.html.erb
@@ -1,7 +1,8 @@
+<%= render 'favorite/favorite'%>
 <h1><%= Time.now %></h1>
 <table>
     <tr>
-        <td><%= image_tag( @detail[0].image_path , :size => "200x200")  %></td>
+        <td><%= image_tag( 'hitokage.png' , :size => "200x200")  %></td>
     </tr>
     <tr>
         <th>作品名：</th>
@@ -13,7 +14,7 @@
     </tr>
     <tr>
         <th>住所：</th>
-        <td><%= @detail[0].pref_name + @detail[0].city_name + @detail[0].spot_address %></td>
+        <td>あ</td>
     </tr>
     <tr>
         <th>詳細：</th>
@@ -25,6 +26,6 @@
     </tr>
     <tr>
         <th>評価：</th>
-        <td><%= @detail[0].evalution %></td>
+        <td>1</td>
     </tr>
 </table>
