--- a/web_rails/myapp/app/views/static_pages/home.html.erb
+++ b/web_rails/myapp/app/views/static_pages/home.html.erb
@@ -1,17 +1,16 @@
 <% if session[:user_id].nil? %>
   <div class="center jumbotron">
-    <h1>Welcome to the Sample App</h1>
+    <h1>さくれへようこそ！</h1>
 
     <h2>
-      This is the home page for the
-      <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
+      「さくれ」はあなたの観光を有意義なものにしてくれます！
     </h2>
 
-    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "さくれのめんばーになる", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 
 <% else %>
   <%= render('search/search') %>
   <%= render('search/time_line') %>
 <% end %>
+
