--- a/web_rails/myapp/app/views/layouts/_footer.html.erb
+++ b/web_rails/myapp/app/views/layouts/_footer.html.erb
@@ -1,5 +1,3 @@
 <footer class="footer">
-  <%= link_to root_path, id: "logo" do %>
-    <%= image_tag("icon/さくれアイコン3.png", :size => "50x50") %>
-  <% end %>
+    <%= link_to image_tag("icon/さくれアイコン3.png", :size => "50x50", class: "img-responsive center-block"), root_path %>
 </footer>
