[Change] 登録フォーム & タイムライン機能

--- a/web_rails/myapp/app/views/search/_time_line.html.erb
+++ b/web_rails/myapp/app/views/search/_time_line.html.erb
@@ -1,8 +1,11 @@
-<div id="">
+<br>
+<div id="timeline">
   <% @spot = Spot.order('updated_at DESC') %>
-  <%= @spot.each do |data| %>
+  <% @spot.each do |data| %>
+    <%= data.updated_at %>
     <%= data.spot_name %>
+    <%= data.rate %>
+    <br>
   <% end %>
 
-  <%=  %>
 </div>
