--- a/web_rails/myapp/app/views/spot/create_s.html.erb
+++ b/web_rails/myapp/app/views/spot/create_s.html.erb
@@ -5,6 +5,9 @@
   <div class="col-md-6 col-md-offset-3">
 
   <%= form_for @spot = Spot.new do |f| %>
+
+    <%= f.label :"すぽっとのがぞう" %>
+    <%= f.file_field :images, multiple: true %>
     <%= f.label :"すぽっとのなまえ" %>
     <%= f.text_field :spot_name, class: 'form-control' %>
 
