--- a/web_rails/myapp/app/views/offer/complete.html.erb
+++ b/web_rails/myapp/app/views/offer/complete.html.erb
@@ -1,2 +1,6 @@
-<h1>Offer#complete</h1>
-<p>Find me in app/views/offer/complete.html.erb</p>
+<div class="page-header">
+  <h1>お問い合わせ</h1>
+</div>
+<p>
+  お問い合わせいただきありがとうございました。
+</p>
