--- a/web_rails/myapp/app/views/offer/confirm.html.erb
+++ b/web_rails/myapp/app/views/offer/confirm.html.erb
@@ -1,2 +1,30 @@
-<h1>Offer#confirm</h1>
-<p>Find me in app/views/offer/confirm.html.erb</p>
+<div class="page-header">
+  <h1>お問い合わせ</h1>
+</div>
+ 
+<%= form_for @offer, :url => offer_complete_path do |f| %>
+  <table class="table">
+    <tr>
+      <th>名前</th>
+      <td>
+        <%= f.hidden_field :name %>
+        <%= @offer.name %>
+      </td>
+    </tr>
+    <tr>
+      <th>メールアドレス</th>
+      <td>
+        <%= f.hidden_field :email %>
+        <%= @offer.email %>
+      </td>
+    </tr>
+    <tr>
+      <th>お問い合わせ内容</th>
+      <td>
+        <%= f.hidden_field :message %>
+        <%= simple_format(@offer.message) %>
+      </td>
+    </tr>
+  </table>
+  <%= f.submit '送信', :class => 'btn btn-primary' %>
+<% end %>
