--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -29,6 +29,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "ぷろふぃーる", current_user %></li>
               <li><%= link_to "せってい", edit_user_path(current_user) %></li>
+              <li><%= link_to "おきにいり", fav_show_path(user_id:current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "ろぐあうと", logout_path, method: "delete" %>
