--- a/web_rails/myapp/app/views/spot/new.html.erb
+++ b/web_rails/myapp/app/views/spot/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@producte) do |f| %>
+    <%= form_for(@product) do |f| %>
 
       <%= f.label :"さくひんのなまえ" %>
       <%= f.text_field :product_name, class: 'form-control' %>
