--- a/web_rails/myapp/app/views/spot/create_s.html.erb
+++ b/web_rails/myapp/app/views/spot/create_s.html.erb
@@ -5,28 +5,30 @@
   <div class="col-md-6 col-md-offset-3">
 
   <%= form_for @spot = Spot.new do |f| %>
+    <table class="table">
+      <th>すぽっとのがぞう</th>
+      <td><%= f.file_field :images, multiple: true %></td>
 
-    <%= f.label :"すぽっとのがぞう" %>
-    <%= f.file_field :images, multiple: true %>
+      <th>すぽっとのなまえ</th>
+      <td><%= f.text_field :spot_name, class: 'form-control' %><td>
 
-    <%= f.label :"すぽっとのなまえ" %>
-    <%= f.text_field :spot_name, class: 'form-control' %>
+      <%= f.label :"さくひん しょうさい" %>
+      <%= f.text_area :details, class: 'form-control' %>
 
-    <%= f.label :"さくひん しょうさい" %>
-    <%= f.text_area :details, class: 'form-control' %>
-
-    <%= f.label :"郵便番号" %>
-    <%= f.text_field :postcode1, class: 'form-control' %>
-    ー
-    <%= f.text_field :postcode2, class: 'form-control' %>
-    <%= f.label :"都道府県" %>
-    <%= f.collection_select(:prefecture_code, JpPrefecture::Prefecture.all, :code, :name, {prompt: "選択してください", class: 'form-control'}) %>
-    <%= f.label :"市" %>
-    <%= f.text_field :address_city, class: 'form-control' %>
-    <%= f.label :"区" %>
-    <%= f.text_field :address_street, class: 'form-control' %>
-    <%= f.label :"建物" %>
-    <%= f.text_field :address_building, class: 'form-control' %>
+      <%= f.label :"郵便番号" %>
+      <%= f.text_field :postcode1, class: 'form-control' %>
+      ー
+      <%= f.text_field :postcode2, class: 'form-control' %>
+      <%= f.label :"都道府県" %>
+      <%= f.collection_select(:prefecture_code, JpPrefecture::Prefecture.all, :code, :name, {prompt: "選択してください", class: 'form-control'}) %>
+      <%= f.label :"市" %>
+      <%= f.text_field :address_city, class: 'form-control' %>
+      <%= f.label :"区" %>
+      <%= f.text_field :address_street, class: 'form-control' %>
+      <%= f.label :"建物" %>
+      <%= f.text_field :address_building, class: 'form-control' %>
+      
+    </table>
     <%= f.submit "観光地を登録する", class: "btn btn-primary" %>
     
   <% end %>
