--- a/web_rails/myapp/app/views/search/_search.html.erb
+++ b/web_rails/myapp/app/views/search/_search.html.erb
@@ -17,13 +17,13 @@
 
       <div class="tab-content">
         <div id="product-tab" class="tab-pane active">
-          <%= form_tag(spots_path, method: "get") do  %>
+          <%= form_tag(search_result_path, method: "get") do  %>
             <%= text_field_tag :search, params[:search], placeholder: "さくひんめい", class:"form-control"%>
             <%= submit_tag "けんさく", name: nil, class: "btn btn-primary" %>
           <% end %>
         </div>
         <div id="pref-tab" class="tab-pane">
-          <%= form_tag(spots_path, method: "get") do  %>
+          <%= form_tag(search_result_path, method: "get") do  %>
             <%= text_field_tag :search, params[:search], placeholder: "けんめい", class:"form-control" %>
             <%= submit_tag "けんさく", name: nil, class: "btn btn-primary" %>
           <% end %>
