--- a/web_rails/myapp/app/views/users/show.html.erb
+++ b/web_rails/myapp/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
       <h1>
         <% if @user.image_name? %>
           <%= image_tag @user.image_name.thumb.url %>
+          <%= @user.image_name %>
         <% end %>
         <%= @user.user_name %>
       </h1>
