--- a/web_rails/myapp/app/views/search/_time_line.html.erb
+++ b/web_rails/myapp/app/views/search/_time_line.html.erb
@@ -6,11 +6,19 @@
       <%= image_tag(data.images[0].url, class: "img-thumbnail", size: 100) if data.images? %>
     </a>
     <div class="media-body">
-      <h4 class="media-heading"><%= data.spot_name %></h4>
+      <h4 class="media-heading">
+        
+        <!-- ここ -->
+        <%= link_to data.spot_name, add_spot_path %>
+      
+      </h4>
       <%= data.details %>
       <%= button_tag :type => "submit", :class =>"btn btn-default btn-s-md pull-right" do %>
+        
+        <!-- ここ -->
         <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-        <span class="user"><%= data.rate %></span>
+        
+        <%= data.rate %></span>
       <% end %>
     </div>
     <div>
