--- a/web_rails/myapp/app/views/favorite/_favorite.html.erb
+++ b/web_rails/myapp/app/views/favorite/_favorite.html.erb
@@ -1,9 +1,9 @@
-<% if !Favorite.exists?(user_id:current_user.id,spot_id:@detail[0].id) %>
-    <%= link_to fav_path(@detail[0].id) , method: :post , class:"btn btn-default btn-lg"  do %>
+<% if !Favorite.exists?(user_id:current_user.id,spot_id:detail.id) %>
+    <%= link_to fav_path(detail.id) , method: :post , class:"btn btn-default btn-lg"  do %>
         <i class="glyphicon glyphicon-star-empty"></i>
     <% end %>
 <% else %>
-    <%= link_to unfav_path(@detail[0].id),method: :delete , class:"btn btn-default btn-lg"  do %>
+    <%= link_to unfav_path(detail.id),method: :delete , class:"btn btn-default btn-lg"  do %>
         <i class="glyphicon glyphicon-star"></i>
     <% end %>
 <% end %>
