[Change] 計画表作成に取り掛かる

--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -18,8 +18,8 @@
               けいかくひょう <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "つくる", add_spot_path %></li>
-              <li><%= link_to "みる", '#' %></li>
+              <li><%= link_to "つくる", planning_create_path %></li>
+              <li><%= link_to "みる", planning_show_path %></li>
             </ul>
           </li>
           <li class="dropdown">
