--- a/web_rails/myapp/app/views/planning/create.html.erb
+++ b/web_rails/myapp/app/views/planning/create.html.erb
@@ -13,5 +13,15 @@
 
 <!-- 右寄せにする予定 -->
 <div class="">
+  <% form_for(@p) do |f| %>
+    <%= f.collection_select(
+      :a, 
+      Prefecture.all, 
+      :code, 
+      :name, 
+      {prompt: "選択してください", 
+      class: 'form-control'}) 
+    %>
 
+  <% end %>
 </div>
