[Add] 計画表作成テーブル作成

--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
               けいかくひょう <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "つくる", planning_create_path %></li>
+              <li><%= link_to "つくる", planning_index_path %></li>
               <li><%= link_to "みる", planning_show_path %></li>
             </ul>
           </li>
