--- a/web_rails/myapp/app/views/planning/index.html.erb
+++ b/web_rails/myapp/app/views/planning/index.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, 'ゆーざー　さくせい') %>
 <h1>計画表作成</h1>
 <!-- 左寄せにする予定 -->
-<!--
-<div class="">
+<div class="col-md-3">
   <h2>ピックアップ一覧</h2>
   <% @favorite = Favorite.where(user_id: session[:user_id]) %>
   <% @favorite.each do |data| %>
@@ -10,21 +9,19 @@
     <br>
   <% end %>
 </div>
--->
+
 <!-- 右寄せにする予定 -->
-<div class="">
-  <%= form_for(@plan) do |f| %>
-    <table class="table">
+<div class="col-md-9">
+  <table class="table">
+    <tr>
+      <th>時間<span class="text-danger">（必須）</span></th>
+      <th>スポット名<span class="text-danger">（必須）</span></th>
+      <th>コメント</th>
+    </tr>
+    <%= form_for(@plan) do |f| %>
       <tr>
-        <th>時間<span class="text-danger">（必須）</span></th>
         <td><%= f.text_field :date, class: 'form-control' %></td>
-      </tr>
-      <tr>
-        <th>スポット名<span class="text-danger">（必須）</span></th>
         <td><%= f.text_field :spot_name, class: 'form-control' %></td>
-      </tr>
-      <tr>
-        <th>コメント</th>
         <td><%= f.text_field :comment, class: 'form-control' %></td>
       </tr>
     </table>
