--- a/web_rails/myapp/app/views/planning/index.html.erb
+++ b/web_rails/myapp/app/views/planning/index.html.erb
@@ -12,19 +12,24 @@
 
 <!-- 右寄せにする予定 -->
 <div class="col-md-9">
-  <table class="table">
+  <table class="table table-striped table-bordered table-hover">
     <tr>
       <th>時間<span class="text-danger">（必須）</span></th>
       <th>スポット名<span class="text-danger">（必須）</span></th>
       <th>コメント</th>
     </tr>
     <%= form_for(@plan) do |f| %>
-      <tr>
-        <td><%= f.text_field :date, class: 'form-control' %></td>
-        <td><%= f.text_field :spot_name, class: 'form-control' %></td>
-        <td><%= f.text_field :comment, class: 'form-control' %></td>
-      </tr>
+
+    <%= f.nested_fields_for :plan_details, wrapper_tag: :tr do |q| %>
+      <td><%= q.text_field :date, class: 'form-control' %></td>
+      <td><%= q.text_field :spot_name, class: 'form-control' %></td>
+      <td><%= q.text_field :comment, class: 'form-control' %></td>
+      <td><%= q.remove_nested_fields_link 'Delete', class: 'btn btn-danger', role: 'button' %></td>
+    <% end %>
+
     </table>
+    <%= f.add_nested_fields_link :plan_details, 'Add new', class: 'btn btn-primary', role: 'button' %>
+
     <%= f.submit :"計画表を完成させる", class: "btn btn-primary" %>
   <% end %>
 </div>
