--- a/web_rails/myapp/app/assets/stylesheets/planning.scss
+++ b/web_rails/myapp/app/assets/stylesheets/planning.scss
@@ -1,3 +1,4 @@
-// Place all the styles related to the planning controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.bootstrap-date {
+  display: inline-block;
+  width: auto;
+}
