--- a/web_rails/myapp/app/views/search/search_result.html.erb
+++ b/web_rails/myapp/app/views/search/search_result.html.erb
@@ -1,8 +1,8 @@
 <% @result.each do |data| %>
-<ul>
-  <li >
-    <span class="user"><%= data.spot_name %></span>
-    <span><%= data.details %></span>
-  </li>
-</ul>
+  <ul>
+    <li >
+      <span><%= data.spot_name %></span>
+      <span><%= data.details %></span>
+    </li>
+  </ul>
 <% end %>
