--- a/web_rails/myapp/app/views/search/_search.html.erb
+++ b/web_rails/myapp/app/views/search/_search.html.erb
@@ -28,7 +28,7 @@
                  class: "form-horizontal"
               ) do
           %>
-            <%= text_field_tag :search, params[:search],
+            <%= text_field_tag :product, params[:product],
               placeholder: "さくひんめい",
                     class: "form-control"
             %>
