[Change] 県名のプルダウン表示方法変更

--- a/web_rails/myapp/app/views/search/_search.html.erb
+++ b/web_rails/myapp/app/views/search/_search.html.erb
@@ -45,11 +45,12 @@
                 ) do 
           %>
             <div class="form-inline">
+              <% debugger %>
               <%= select_tag 'pref',
                 options_from_collection_for_select(
-                  JpPrefecture::Prefecture.all,
-                  :code,
-                  :name
+                  registered_prefs,
+                  :first,
+                  :second
                 ),
                 class: "form-control"
               %>
