--- a/web_rails/myapp/app/views/planning/index.html.erb
+++ b/web_rails/myapp/app/views/planning/index.html.erb
@@ -3,9 +3,9 @@
 <!-- 左寄せにする予定 -->
 <div class="col-md-2" style="text-align: center;">
   <h2>ピックアップ一覧</h2>
-  <% @favorite = Favorite.where(user_id: session[:user_id]) %>
-  <% @favorite.each do |data| %>
-    <%= (Spot.find_by(id: data.spot_id)).spot_name %>
+  <% hash = {} %>
+  <% (Favorite.where(user_id: session[:user_id])).each do |data| %>
+    <%= hash.merge!(data.spot_id => (Spot.find_by(id: data.spot_id)).spot_name) %>
     <br>
   <% end %>
   <br>
@@ -27,7 +27,7 @@
           <%= q.datetime_select :date, {}, {class: 'form-control bootstrap-date'} %>
         </td>
         <td style="text-align: center;">
-          <%= q.text_field :spot_name, class: 'form-control' %>
+          <%= q.select :spot_name, hash.values, {}, {class:"form-control"} %>
         </td>
         <td style="text-align: center;">
           <%= q.text_field :comment, class: 'form-control' %>
