[Add] 地域検索にajax追加中

--- a/web_rails/myapp/app/views/search/_search.html.erb
+++ b/web_rails/myapp/app/views/search/_search.html.erb
@@ -49,16 +49,23 @@
                 options_from_collection_for_select(
                   registered_prefs,
                   :first,
-                  :second
+                  :second,
+                  id: 'pref'
                 ),
                 class: "form-control"
               %>
-            <!--西田: スポットに登録されたエリアを表示できるようにする -->
+
+              <div class="city-area form-control">
+                <%= render partial: 'search/select_city', locals: {pref_code: 99} %>
+              </div>
+
+              <!--西田: スポットに登録されたエリアを表示できるようにする
               <%= text_field_tag :city,
                 params[:city],
                 placeholder: "しちょうそん",
                       class: "form-control"
               %>
+              -->
             </div>
             <%= submit_tag "けんさく", name: nil, class: "btn btn-primary" %>
           <% end %>
