地域検索のAjax処理完成

--- a/web_rails/myapp/app/views/search/_search.html.erb
+++ b/web_rails/myapp/app/views/search/_search.html.erb
@@ -55,17 +55,9 @@
                 class: "form-control"
               %>
 
-              <div class="city-area form-control">
-                <%= render partial: 'search/select_city', locals: {pref_code: 99} %>
-              </div>
-
-              <!--西田: スポットに登録されたエリアを表示できるようにする
-              <%= text_field_tag :city,
-                params[:city],
-                placeholder: "しちょうそん",
-                      class: "form-control"
-              %>
-              -->
+              <label id="city-area">
+                <%= render partial: 'search/select_city', locals: {spots: Spot.all} %>
+              </label>
             </div>
             <%= submit_tag "けんさく", name: nil, class: "btn btn-primary" %>
           <% end %>
