--- a/web_rails/myapp/app/views/search/search_detail.html.erb
+++ b/web_rails/myapp/app/views/search/search_detail.html.erb
@@ -28,3 +28,15 @@
         <td><%= render 'rate/rate' , detail: @detail[0] %></td>
     </tr>
 </table>
+<%= form_for @comment do |f| %>
+    <%= f.text_field :comment %>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+    <%= f.hidden_field :spot_id, :value => params[:spot_id] %>
+    <br>
+    <%= f.submit 'コメントする' %>
+<% end %>
+
+<% @comments.each do |comment| %>
+    <p><%= comment.user_id %></p>
+    <p><%= comment.comment %></p>
+<% end %>
