--- a/web_rails/myapp/app/views/search/_search.html.erb
+++ b/web_rails/myapp/app/views/search/_search.html.erb
@@ -16,6 +16,10 @@
           <a href="#pref-tab" class="nav-link" data-toggle="tab" >
             ちいき
           </a>
+        <li class="nav-item">
+          <a href="#product-and-pref-tab" class="nav-link" data-toggle="tab" >
+            さくひん×ちいき
+          </a>          
         </li>
       </ul>
 
@@ -57,6 +61,37 @@
                 ) do 
           %>
             <div class="form-inline">
+              <%= select_tag 'pref',
+                options_from_collection_for_select(
+                  select_prefs,
+                  :first,
+                  :second,
+                  id: 'pref'
+                ),
+                class: "form-control"
+              %>
+              <label id="city-area">
+                <%= render partial: 'search/select_city', locals: {spots: Spot.all} %>
+              </label>
+            </div>
+            <%= submit_tag "けんさく", name: nil, class: "btn btn-primary" %>
+          <% end %>
+        </div>
+
+        <!--　作品×地域検索フォーム　-->
+        <div id="product-and-pref-tab" class="tab-pane">
+          <%= form_tag(
+                search_result_path,
+                method: "get",
+                 class: "form-horizontal"
+                ) do 
+          %>
+            <div class="form-inline">
+              <%= text_field_tag :product, params[:product],
+                placeholder: "さくひんめい",
+                      class: "form-control"
+              %>
+              <strong>✕</strong>
               <%= select_tag 'pref',
                 options_from_collection_for_select(
                   select_prefs,
