--- a/web_rails/myapp/app/assets/stylesheets/planning.scss
+++ b/web_rails/myapp/app/assets/stylesheets/planning.scss
@@ -7,7 +7,7 @@
 		url('../fonts/timelineicons/ecoico.svg#ecoico') format('svg');
 	font-weight: normal;
 	font-style: normal;
-} /* Made with http://icomoon.io/ */
+}
 
 .cbp_tmtimeline {
 	margin: 30px 0 0 0;
@@ -23,7 +23,8 @@
 	top: 0;
 	bottom: 0;
 	width: 10px;
-	background: #afdcf8;
+	//background: #afdcf8;
+	background: #EE82EE;
 	left: 20%;
 	margin-left: -10px;
 }
@@ -47,22 +48,26 @@
 
 .cbp_tmtimeline > li .cbp_tmtime span:first-child {
 	font-size: 0.9em;
-	color: #bdd0db;
+	//color: #bdd0db;
+	color: #EE82EE;
 }
 
 .cbp_tmtimeline > li .cbp_tmtime span:last-child {
 	font-size: 2.9em;
-	color: #3594cb;
+	//color: #3594cb;
+	color: #EE82EE;
 }
 
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmtime span:last-child {
-	color: #6cbfee;
+	//color: #6cbfee;
+	color: #EE82EE;
 }
 
 /* Right content */
 .cbp_tmtimeline > li .cbp_tmlabel {
 	margin: 0 0 15px 25%;
-	background: #3594cb;
+	//background: #3594cb;
+	background: #EE82EE;
 	color: #fff;
 	padding: 2em;
 	font-size: 1.2em;
@@ -73,7 +78,8 @@
 }
 
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel {
-	background: #6cbfee;
+	//background: #6cbfee;
+	background: #EE82EE;
 }
 
 .cbp_tmtimeline > li .cbp_tmlabel h2 { 
@@ -91,13 +97,15 @@
 	width: 0;
 	position: absolute;
 	pointer-events: none;
-	border-right-color: #3594cb;
+	//border-right-color: #3594cb;
+	border-right-color: rgb(230, 174, 230);
 	border-width: 10px;
 	top: 10px;
 }
 
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel:after {
-	border-right-color: #6cbfee;
+	//border-right-color: #6cbfee;
+	border-right-color: #EE82EE
 }
 
 /* The icons */
@@ -115,9 +123,11 @@
 	-webkit-font-smoothing: antialiased;
 	position: absolute;
 	color: #fff;
-	background: #46a4da;
+	//background: #46a4da;
+	background: #EE82EE;
 	border-radius: 50%;
-	box-shadow: 0 0 0 8px #afdcf8;
+	//box-shadow: 0 0 0 8px #afdcf8;
+	box-shadow: 0 0 0 8px rgb(230, 175, 230);
 	text-align: center;
 	left: 20%;
 	top: 0;
@@ -174,13 +184,15 @@
 		right: auto;
 		left: 20px;
 		border-right-color: transparent;
-		border-bottom-color: #3594cb;
+		//border-bottom-color: #3594cb;
+		border-bottom-color: rgb(230, 175, 230);
 		top: -20px;
 	}
 
 	.cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel:after {
 		border-right-color: transparent;
-		border-bottom-color: #6cbfee;
+		//border-bottom-color: #6cbfee;
+		border-bottom-color: rgb(230, 175, 230);
 	}
 
 	.cbp_tmtimeline > li .cbp_tmicon {
