--- a/web_rails/myapp/app/views/users/show.html.erb
+++ b/web_rails/myapp/app/views/users/show.html.erb
@@ -13,6 +13,7 @@
           <% end %>
           <tr><td><%= @user.user_name %></td></tr>
           <tr><td><%= @user.email %></td></tr>
+          <tr><td><%= @user.rating %></td></tr>
         </table>
       </h1>
     </section>
